--- a/workspace2/ERPlab/src/main/resources/templates/views/thymeleaf/intranet/annual_leave.html
+++ b/workspace2/ERPlab/src/main/resources/templates/views/thymeleaf/intranet/annual_leave.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+ 	<th:block th:insert="~{thymeleaf/common/intranetheader::intranetheader}"></th:block>
 
     
     <div class="annual_leave_box">
@@ -35,6 +36,7 @@
 			</div>
 		</div>
 	</div>
+	<th:block th:insert="~{thymeleaf/common/footer::footer}"></th:block>
 
 </body>
 
