--- a/workspace2/ERPlab/src/main/resources/templates/views/thymeleaf/intranet/organization.html
+++ b/workspace2/ERPlab/src/main/resources/templates/views/thymeleaf/intranet/organization.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
- 
+ 	<th:block th:insert="~{thymeleaf/common/intranetheader::intranetheader}"></th:block>
  	
 	<div class="organization_box">
 		<div class="organization_title">조직도</div>
@@ -164,6 +164,7 @@
 			</div>
 		</div>
 	</div>
+	<th:block th:insert="~{thymeleaf/common/footer::footer}"></th:block>
 
 
 </body>
