--- a/workspace2/ERPlab/src/main/resources/templates/views/thymeleaf/common/header.html
+++ b/workspace2/ERPlab/src/main/resources/templates/views/thymeleaf/common/header.html
@@ -111,7 +111,7 @@
 						<a th:href="@{b/b4/b41}">
 							<p>마감 / 결산</p>
 						</a>
-						<a th:href="">
+						<a href="#">
 							<p>원가분석</p>
 						</a>
 					</li>
@@ -120,13 +120,13 @@
 							<a th:href="@{/greeting}">
 								<p>인사정보</p>
 							</a>
-							<a href="">
+							<a href="#">
 								<p>조직관리</p>
 							</a>
 							<a th:href="@{/greeting/attendance}">
 								<p>근태관리</p>
 							</a>
-							<a href="">
+							<a href="#">
 								<p>정산</p>
 							</a>
 							<a href="#">
@@ -180,7 +180,7 @@
 							<a th:href="@{/c/c3/c31/storesales}">
 								<p>매장관리</p>
 							</a>
-							<a th:href="">
+							<a href="">
 								<p>발주관리</p>
 							</a>
 							<a th:href="@{/c/c4/c43/customer}">
