--- a/workspace2/ERPlab/src/main/resources/templates/views/thymeleaf/c/storesales.html
+++ b/workspace2/ERPlab/src/main/resources/templates/views/thymeleaf/c/storesales.html
@@ -63,48 +63,45 @@
 							<button type="button" id="addRow_btn">행추가</button>
 							<button type="button" id="delRow_btn">행삭제</button>
 						</div>
-						
-						<table class="item_list_result">
+
+<table class="item_list_result">
 							 <tr>
 								<th class="sec1">조회</th>
 								<th class="hidden">코드</th>
-								<th class="sec2">로트번호</th>
+								<th class="hidden">코드명</th>
+								<th class="sec2">로트코드</th>
 	                            <th class="sec3">수량</th>
-	                            <th class="sec4">제조일자</th>
-	                            <th class="sec5">유통기한</th>
-	                            <th class="sec6">원가</th>
-	                            <th class="hidden">세액</th>
-	                            <th class="hidden">총원가</th>
+	                            <th class="sec4">원가</th>
+	                            <th class="sec5">세액</th>
+	                            <th class="sec6">총원가</th>
 	                            <th class="hidden">상품코드</th>
 	                            <th class="sec7">품목삭제</th>
 	                        </tr>
-                        	<th:block th:if="${goodslot_list != null}">
-								<tr class="list_result_items" th:each="goodslot_item : ${goodslot_list}">
+                        	<th:block th:if="${salesgoods_list != null}">
+								<tr class="list_result_items" th:each="salesgoods_item : ${salesgoods_list}">
 									<td><button type="button" class="list_result_btn" id="list_result_search">SEARCH</button></td>
-									<td class="hidden"><input type="hidden" name="goodslot_no" th:value="${goodslot_item.goodslot_no}" readonly/></td>
-									<td><input type="text" name="goodslot_lot" th:value="${goodslot_item.goodslot_lot}" readonly/></td>
-		                            <td><input type="number" name="goodslot_qty" th:value="${goodslot_item.goodslot_qty}" readonly/></td>
-		                            <td><input type="text" name="goodslot_production" th:value="${goodslot_item.goodslot_production}" readonly/></td>
-		                            <td><input type="text" name="goodslot_expiry" th:value="${goodslot_item.goodslot_expiry}" readonly/></td>
-		                            <td><input type="number" name="goodslot_price" th:value="${goodslot_item.goodslot_price}" readonly/></td>
-		                            <td class="hidden"><input type="hidden" name="goodslot_tax" th:value="${goodslot_item.goodslot_tax}" readonly/></td>
-		                            <td class="hidden"><input type="hidden" name="goodslot_total" th:value="${goodslot_item.goodslot_total}" readonly/></td>
-		                            <td class="hidden"><input type="hidden" name="goods_no" th:value="${goodslot_item.goods_no}" readonly/></td>
+									<td class="hidden"><input type="hidden" name="salesgoods_no" th:value="${salesgoods_item.salesgoods_no}" /></td>
+									<td class="hidden"><input type="hidden" name="salesgoods_code" th:value="${salesgoods_item.salesgoods_code}" /></td>
+		                            <td><input type="text" name="goodslot_no" th:value="${salesgoods_item.goodslot_no}" /></td>
+		                            <td><input type="number" name="salesgoods_qty" th:value="${salesgoods_item.salesgoods_qty}" /></td>
+		                            <td><input type="number" name="salesgoods_price" th:value="${salesgoods_item.salesgoods_price}" /></td>
+		                            <td><input type="number" name="salesgoods_tax" th:value="${salesgoods_item.salesgoods_tax}" /></td>
+		                            <td><input type="number" name="salesgoods_total" th:value="${salesgoods_item.salesgoods_total}" /></td>
+		                            <td class="hidden"><input type="hidden" name="goods_no" th:value="${salesgoods_item.goods_no}" /></td>
 		                            <td><button type="button" class="list_result_btn" id="list_result_del">품목삭제</button></td>
 								</tr>
 							</th:block>
-							<th:block th:if="${goodslot_list == null}">
+							<th:block th:if="${salesgoods_list == null}">
 								<tr class="list_result_items order0">
 									<td><button type="button" class="list_result_btn" id="list_result_search0">SEARCH</button></td>
-									<td class="hidden"><input type="hidden" name="goodslot_no" id="goodslot_no0" /></td>
-									<td><input type="text" name="goodslot_lot" id="goodslot_lot0" /></td>
-		                            <td><input type="number" name="goodslot_qty" id="goodslot_qty0"/></td>
-		                            <td><input type="text" name="goodslot_production" id="goodslot_production0" /></td>
-		                            <td><input type="text" name="goodslot_expiry" id="goodslot_expiry0" /></td>
-		                            <td><input type="number" name="goodslot_price" id="goodslot_price0"/></td>
-		                            <td class="hidden"><input type="hidden" name="goodslot_tax" id="goodslot_tax0"/></td>
-		                            <td class="hidden"><input type="hidden" name="goodslot_total" id="goodslot_total0"/></td>
-		                            <td class="hidden"><input type="hidden" name="goods_no" id="goods_no0"/></td>
+									<td class="hidden"><input type="hidden" name="salesgoods_no" id="salesgoods_no0"/></td>
+									<td class="hidden"><input type="hidden" name="salesgoods_code" id="salesgoods_code0" /></td>
+		                            <td><input type="text" name="goodslot_no" id="goodslot_no0" /></td>
+		                            <td><input type="number" name="salesgoods_qty" id="salesgoods_qty" /></td>
+		                            <td><input type="number" name="salesgoods_price" id="salesgoods_price0" /></td>
+		                            <td><input type="number" name="salesgoods_tax" id="salesgoods_tax0" /></td>
+		                            <td><input type="number" name="salesgoods_total" id="salesgoods_total0" /></td>
+		                            <td class="hidden"><input type="hidden" name="goods_no" id="goods_no0" /></td>
 		                            <td><button type="button" class="list_result_btn" id="list_result_del0">품목삭제</button></td>
 								</tr>
 							</th:block>
